--- a/views/layout/main.html
+++ b/views/layout/main.html
@@ -2,23 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>我的音乐</title>
-    <!--引包-->
+    <title>ggttftf</title>
     {{include '../particals/linker.html'}}
+
 </head>
 <body>
- <!--头部-->
- {{include '../particals/header.html'}}
+{{include '../particals/header.html'}}
 
 
- <!--中间内容-->
- {{block 'context'}}
-    <!--默认内容-->
- {{/block}}
+{{block 'content'}}{{/block}}
+
+
+{{include '../particals/footer.html'}}
 
 
 
- <!--底部-->
- {{include '../particals/footer.html'}}
+
 </body>
+
 </html>
