--- a/views/particals/header.html
+++ b/views/particals/header.html
@@ -1,6 +1,28 @@
 <header class="head">
+  {{if user}}
   <div class="container">
-    <button class="login">登陆</button>
-    <button class="sign">注册</button>
+    <a href="/login"><button class="login">{{user.username}}</button></a>
+    <button class="tc">退出</button>
   </div>
+  {{else}}
+  <div class="container">
+    <a href="/login"><button class="login">登陆</button></a>
+    <a href="/register"><button class="sign">注册</button></a>
+</div>
+  {{/if}}
 </header>
+<script>
+    window.onload=function(){
+        $('.tc').on('click',function () {
+            $.ajax({
+                url:'/user/logout',
+                type:'get',
+                data:'',
+                success:function (result) {
+                    alert(result.msg);
+                    window.location.href='/login';
+                }
+            })
+        })
+    }
+</script>
