--- a/views/register.html
+++ b/views/register.html
@@ -9,12 +9,8 @@
 </head>
 <body>
 <!--头部区域-->
-<header class="head">
-    <div class="container">
-        <button class="login">登陆</button>
-        <button class="sign">注册</button>
-    </div>
-</header>
+<!--头部区域-->
+{{include 'particals/header.html'}}
 <!--登陆框-->
 <section class="login-wrapper">
     <!--//logo-->
@@ -28,11 +24,11 @@
                     <li class="email"><input type="text" name="email"  placeholder="邮箱"></li>
                     <li class="password"><input type="password" name="password"   placeholder="密码"></li>
                     <li class="pswjb">密码强度：</li>
-                    <li class="v_code"><input type="text"  placeholder="验证码" name="v_code"><img src="/user/get-pic" alt="" class="yzm"></li>
+                    <li class="v_code"><input type="text"  placeholder="验证码" name="v_code"><img src="/user/get-pic" alt="" class="yzm" onclick="getyzm()"></li>
                     <li>
                        我同意
                         <a href="#">用户协议</a>
-                        <a href="#">已有账号？</a>
+                        <a href="/login">已有账号？</a>
                     </li>
                     <li><button type="submit" class="commit">注册</button></li>
                 </ul>
