--- a/views/register.html
+++ b/views/register.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../public/test/css/common.css">
     <link rel="stylesheet" href="../public/test/css/index.css">
     <link rel="stylesheet" href="../public/test/css/register.css">
+    <link rel="stylesheet" href="../public/test/css/dialog.css">
 </head>
 <body>
 <!--头部区域-->
@@ -41,5 +42,6 @@
 <script src="../public/test/js/jquery-validation-1.14.0/dist/jquery.validate.js"></script>
 <script src="../public/test/js/jquery-validation-1.14.0/dist/localization/messages_zh.js"></script>
 <script src="../public/test/js/register.js"></script>
+<script src="../public/test/js/dialog.js"></script>
 </body>
 </html>
