--- a/views/login.html
+++ b/views/login.html
@@ -5,6 +5,7 @@
     <title>Title</title>
     <link rel="stylesheet" href="../public/test/css/common.css">
     <link rel="stylesheet" href="../public/test/css/index.css">
+    <link rel="stylesheet" href="../public/test/css/dialog.css">
 </head>
 <body>
 <!--头部区域-->
@@ -49,4 +50,5 @@
 <script src="../public/test/js/jquery-validation-1.14.0/dist/jquery.validate.js"></script>
 <script src="../public/test/js/jquery-validation-1.14.0/dist/localization/messages_zh.js"></script>
 <script src="../public/test/js/index.js"></script>
+<script src="../public/test/js/dialog.js"></script>
 </html>
