--- a/public/test/css/common.css
+++ b/public/test/css/common.css
@@ -3,7 +3,7 @@ body{font:12px"宋体","Arial Narrow",HELVETICA;background:#fff;-webkit-text-siz
 a{color:#2d374b;text-decoration:none}
 a:hover{color:#cd0200;text-decoration:underline}
 em{font-style:normal}
-li{list-style:none}
+ul,li{list-style:none}
 img{border:0;vertical-align:middle}
 table{border-collapse:collapse;border-spacing:0}
 p{word-wrap:break-word}
