--- a/views/layout/main.html
+++ b/views/layout/main.html
@@ -2,20 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>ggttftf</title>
-    <!--{{include '../particals/linker.html'}}-->
+    <title>home</title>
+    <link rel="stylesheet" href="../../public/test/css/common.css">
+    <link rel="stylesheet" href="../../public/test/css/index.css">
+    <script src="../../public/test/js/jquey1.11.1.js"></script>
+    {{block 'head'}}
+
+    {{/block}}
 
 </head>
 <body>
-<!--{{include '../particals/header.html'}}-->
+{{include '../particals/header.html'}}
 
 
-<!--{{block 'content'}}{{/block}}-->
+{{block 'content'}}{{/block}}
 
 
 <!--{{include '../particals/footer.html'}}-->
-
-
 
 
 </body>
