--- a/views/layout/main.html
+++ b/views/layout/main.html
@@ -3,17 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>ggttftf</title>
-    <!--{{include '../particals/linker.html'}}-->
+    {{include '../particals/linker.html'}}
+    {{block 'head'}}{{/block}}
 
 </head>
 <body>
-<!--{{include '../particals/header.html'}}-->
+{{include '../particals/header.html'}}
 
 
-<!--{{block 'content'}}{{/block}}-->
+{{block 'content'}}{{/block}}
 
 
-<!--{{include '../particals/footer.html'}}-->
+{{include '../particals/footer.html'}}
 
 
 
