--- a/public/test/css/upload-picture.css
+++ b/public/test/css/upload-picture.css
@@ -1,9 +1,9 @@
 .content-img{width: 1000px;margin:  0 auto}
-.content-img .content-img-list{width: 100%;padding: 5px 0;margin: 0 -5px}
-.content-img .content-img-list li{width: 25%;padding: 0 5px;float: left;position: relative;overflow: hidden}
-.content-img .content-img-list li:hover a{transition: 0.3s ease all;bottom: 0}
-.content-img .content-img-list li img{max-width: 100%}
-.content-img .content-img-list li a{cursor: pointer;text-decoration: none;display: block;color: #fff;height: 40px;background-color: rgba(0, 0, 0, 0.5);font-size: 16px;line-height: 40px;z-index: 99;text-align: center;width: 100%;position: absolute;bottom: -40px}
-.content-img .file{width: 25%;padding: 0 5px;}
-.content-img .file .ico-plus{background-color: red;cursor: pointer;padding: 10px}
-.content-img .file #upload{opacity: 0}
+.content-img-list{width: 100%;padding: 5px 0;margin: 0 -5px;overflow: hidden}
+.content-img-list li{width: 225px;height: 225px;padding: 0 5px;float: left;position: relative;overflow: hidden}
+.content-img-list li:hover a{transition: 0.3s ease all;bottom: 0}
+.content-img-list li img{height: 100%;max-width: 100%}
+.content-img-list li a{cursor: pointer;text-decoration: none;display: block;color: #fff;height: 40px;background-color: rgba(0, 0, 0, 0.5);font-size: 16px;line-height: 40px;z-index: 99;text-align: center;width: 100%;position: absolute;bottom: -40px}
+.file{width: 25%;padding: 0 5px;}
+.file .ico-plus{background-color: red;cursor: pointer;padding: 10px}
+.file #upload{opacity: 0}
