--- a/views/layout/main.html
+++ b/views/layout/main.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../../public/test/css/common.css">
     <link rel="stylesheet" href="../../public/test/css/index.css">
     <script src="../../public/test/js/jquey1.11.1.js"></script>
+    {{include '../particals/linker.html'}}
     {{block 'head'}}
 
     {{/block}}
