--- a/views/particals/linker.html
+++ b/views/particals/linker.html
@@ -1,3 +1,2 @@
-<link rel="stylesheet" href="../../public/test/css/common.css">
-<link rel="stylesheet" href="../../public/test/css/index.css">
-<script src="../../public/test/js/jquey1.11.1.js"></script>
+<script src="../../public/test/js/jquery-validation-1.14.0/dist/jquery.validate.min.js"></script>
+<script src="../../public/test/js/jquery-validation-1.14.0/src/localization/messages_zh.js"></script>
