--- a/views/index.html
+++ b/views/index.html
@@ -147,39 +147,39 @@
             <h4>Lorem ipsum dolor sit amet, consectetuer adipiscing elit</h4>
         </div>
         <div class="one-five-div">
-            <div class="one-five-div1">
-                <img src="../public/static/img/people/img1-large.jpg" alt="">
-                <h3>Marcus Doe</h3>
-                <span>FOUNDER</span>
-                <p>Lorem ipsum dolor amet, tempor ut labore magna tempor dolore</p>
-                <div class="one-five-i">
-                    <a href="" class=" iconfont-first icon-firstfacebook"></a>
-                    <a href="" class=" iconfont-first icon-firsttwitter"></a>
-                    <a href="" class=" iconfont-first icon-firstyouxiang"></a>
-                </div>
-            </div>
-            <div class="one-five-div1">
-                <img src="../public/static/img/people/img2-large.jpg" alt="">
-                <h3>Elena Taylor</h3>
-                <span>DESIGNER</span>
-                <p>Lorem ipsum dolor amet, tempor ut labore magna tempor dolore</p>
-                <div class="one-five-i">
-                    <a href="" class=" iconfont-first icon-firstfacebook"></a>
-                    <a href="" class=" iconfont-first icon-firsttwitter"></a>
-                    <a href="" class=" iconfont-first icon-firstyouxiang"></a>
-                </div>
-            </div>
-            <div class="one-five-div1">
-                <img src="../public/static/img/people/img3-large.jpg" alt="">
-                <h3>Cris Nilson</h3>
-                <span>DEVELOPER</span>
-                <p>Lorem ipsum dolor amet, tempor ut labore magna tempor dolore</p>
-                <div class="one-five-i">
-                    <a href="" class=" iconfont-first icon-firstfacebook"></a>
-                    <a href="" class=" iconfont-first icon-firsttwitter"></a>
-                    <a href="" class=" iconfont-first icon-firstyouxiang"></a>
-                </div>
-            </div>
+            <!--<div class="one-five-div1">-->
+                <!--<img src="../public/static/img/people/img1-large.jpg" alt="">-->
+                <!--<h3>Marcus Doe</h3>-->
+                <!--<span>FOUNDER</span>-->
+                <!--<p>Lorem ipsum dolor amet, tempor ut labore magna tempor dolore</p>-->
+                <!--<div class="one-five-i">-->
+                    <!--<a href="" class=" iconfont-first icon-firstfacebook"></a>-->
+                    <!--<a href="" class=" iconfont-first icon-firsttwitter"></a>-->
+                    <!--<a href="" class=" iconfont-first icon-firstyouxiang"></a>-->
+                <!--</div>-->
+            <!--</div>-->
+            <!--<div class="one-five-div1">-->
+                <!--<img src="../public/static/img/people/img2-large.jpg" alt="">-->
+                <!--<h3>Elena Taylor</h3>-->
+                <!--<span>DESIGNER</span>-->
+                <!--<p>Lorem ipsum dolor amet, tempor ut labore magna tempor dolore</p>-->
+                <!--<div class="one-five-i">-->
+                    <!--<a href="" class=" iconfont-first icon-firstfacebook"></a>-->
+                    <!--<a href="" class=" iconfont-first icon-firsttwitter"></a>-->
+                    <!--<a href="" class=" iconfont-first icon-firstyouxiang"></a>-->
+                <!--</div>-->
+            <!--</div>-->
+            <!--<div class="one-five-div1">-->
+                <!--<img src="../public/static/img/people/img3-large.jpg" alt="">-->
+                <!--<h3>Cris Nilson</h3>-->
+                <!--<span>DEVELOPER</span>-->
+                <!--<p>Lorem ipsum dolor amet, tempor ut labore magna tempor dolore</p>-->
+                <!--<div class="one-five-i">-->
+                    <!--<a href="" class=" iconfont-first icon-firstfacebook"></a>-->
+                    <!--<a href="" class=" iconfont-first icon-firsttwitter"></a>-->
+                    <!--<a href="" class=" iconfont-first icon-firstyouxiang"></a>-->
+                <!--</div>-->
+            <!--</div>-->
         </div>
 
 
